--- a/client/src/app/errors/test-errors/test-errors.component.html
+++ b/client/src/app/errors/test-errors/test-errors.component.html
@@ -4,4 +4,12 @@
     <button (click)="get400Error()" class="btn btn-outline-primary mr3">Test 400 error</button>
     <button (click)="get401Error()" class="btn btn-outline-primary mr3">Test 401 error</button>
     <button (click)="get400ValidationError()" class="btn btn-outline-primary mr3">Test 400 validation error</button>
+
+    <div class="row mt-5" *ngIf="validationErrors.length > 0">
+        <ul class="text-danger">
+            <li *ngFor="let error of validationErrors">
+                {{error}}
+            </li>
+        </ul>
+    </div>
 </ng-container>
